tbg-nodes/deployments_kustomize/staging/step_2/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: kustomize-managed
  name: tbg-nodes-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
    nginx.ingress.kubernetes.io/affinity: cookie
spec:
  tls:
    - secretName: "tbg-nodes.staging.dgo.unchain.io"
      hosts:
        - "tbg-nodes.staging.dgo.unchain.io"
  rules:
    - host: "tbg-nodes.staging.dgo.unchain.io"
      http:
        paths:
          - path: "/"
            backend:
              serviceName: tbg-nodes-service
              servicePort: default
